# intelligent-machine-design-lab

./: .gitmodules  EDBG UART.atzip  PWM Waveform.atzip  README.md  SERCOM_TEST.atzip  SPI SLAVE DMA.atzip  SmartEEPROM Example.atzip
1_LED_statemachine/: LED_Switcher.cproj  custom_functions.c  custom_functions.h
2_counter_statemachine/: LED_Switcher.cproj  atmel_start_pins.h  custom_functions.c  driver_init.h  main.c
3_UART_communication/: LED_Switcher.cproj  atmel_start_pins.h  driver_init.c  main.c  set_duty.h
4.1_LED_statemachine/: LED_Switcher.atsln  main.c
4.2_counter_statemachine/: counter_statemachine.atsln  counter_statemachine.cproj
4.3_UART_communication/: UART_communication.atsln  UART_communication.cproj  set_duty.c
4.4_timer_LED/: atmel_start_pins.h  driver_init.h  timer_LED.atsln  timer_LED.cproj  timer_task.h
4.5_stopwatch/: driver_init.c  main.c  stopwatch.atsln  stopwatch.cproj
4_timer&LED/: LED_Switcher.componentinfo.xml  LED_Switcher.cproj  driver_init.c  main.c  timer_task2.h
5.1_Infrared Digital sensors/: Infrared digital sensor.atsln  Infrared digital sensor.cproj  atmel_start_pins.h  custom_functions.c  driver_init.c  main.c
5.2_Infrared Digital sensors/: Infrared digital sensor.cproj  driver_init.c  main.c
5.3_Infrared Digital sensors/: Infrared digital sensor.cproj  atmel_start_pins.h  driver_init.c  driver_init.h  main.c  timer_task.c
5.4_sercom_module2 -new/: custom_functions.h  main.c
irobot_ws/src/traj_interpolator/: CMakeLists.txt  package.xml
irobot_ws/src/traj_interpolator/src/: draw_traj.cpp
(+822 files in other folders)
